--- a/compare_evaluation_curves.ipynb
+++ b/compare_evaluation_curves.ipynb
@@ -33,12 +33,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.datasets import make_classification, make_regression, make_blobs\n",
+    "from sklearn.datasets import make_classification\n",
     "from sklearn.metrics import roc_curve, auc, precision_recall_curve, average_precision_score, f1_score\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use('ggplot')\n",
